--- a/Note Taking App JSX/tsconfig.json
+++ b/Note Taking App JSX/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "files": [],
+  "compilerOptions": {
+    "allowJs": true, 
+    "checkJs": false 
+  },
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
